@@ -25,6 +25,9 @@ JUnit Plafform 1.6 (https://junit.org/junit5/docs/5.6.0/release-notes/index.html
 
 - Upgrade JUnit 4 to 4.13
 
+- Type casts in conditions are now properly carried over to properly disambiguate method calls.
+  For more information see issue https://github.com/spockframework/spock/issues/1022[#1022].
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
